# flexpes-nexafs

./: .gitignore  CHANGELOG.md  FlexPES-NEXAFS.spec  README.md  pyproject.toml  run_flexpes.py
src/flexpes_nexafs/: __init__.py  app.py  channel_setup.py  compat.py  data.py  export.py  library.h5  library.py  plotting.py  processing.py  state.py  ui.py  ui_treeviews.py
src/flexpes_nexafs/decomposition/: __init__.py  legacy.py
src/flexpes_nexafs/docs/: CHANGELOG.md  channel_mappings.json  help.md  usage_controls.md  usage_workflows.md
src/flexpes_nexafs/example_data/: README.md
src/flexpes_nexafs/gui/: app_window.py
src/flexpes_nexafs/plotting/: __init__.py  mixin_annotations.py  mixin_core.py  mixin_grid_axes.py  mixin_group_bg.py  mixin_legend.py  mixin_preedge_vline.py  mixin_processed_plot.py  mixin_qt_shims.py  mixin_raw_plot.py  mixin_styles.py  mixin_waterfall.py
src/flexpes_nexafs/utils/: __init__.py  help_text.py  nan_policy.py  sorting.py
src/flexpes_nexafs/widgets/: __init__.py  annotation_dialog.py  curve_item.py  curve_summation_dialog.py  help_browser.py  legend_style_dialog.py  library_browser_dialog.py  library_dialog.py
tests/: test_import.py
