[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flexpes-nexafs"
version = "1.9.6"
description = "FlexPES NEXAFS Plotter: PyQt GUI to browse, process and visualize HDF5 data."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Alexei Preobrajenski" }]
dependencies = ["PyQt5>=5.15", "matplotlib>=3.7", "numpy>=1.23", "h5py>=3.8"]

[project.scripts]
flexpes-nexafs = "flexpes_nexafs.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["flexpes_nexafs*"]

[tool.setuptools.package-data]
flexpes_nexafs = ["docs/*.md"]
